Fix chart jumping

--- a/SystemChecker.Web/ClientApp/app/dashboard/dashboard.style.scss
+++ b/SystemChecker.Web/ClientApp/app/dashboard/dashboard.style.scss
@@ -18,3 +18,7 @@
     top: 45px;
     cursor: pointer;
 }
+
+.chart {
+    height: 300px;
+}
